Fix: chars like W being too wide

--- a/style.css
+++ b/style.css
@@ -240,6 +240,17 @@ body {
     margin-right: 12px;
 }
 
+/* --- Train No. Optimization --- */
+
+/* 
+   Fix chars like 'W', 'M'
+*/
+.col-no .flap-char .card-content {
+    font-family: "DIN Alternate", "Helvetica Neue Condensed", "Arial Narrow", "Franklin Gothic Medium", sans-serif;
+    transform: scaleX(0.85);
+    font-weight: 800;
+}
+
 .col-time {
     width: 140px;
 }
